2009-09-07  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/nwam-manager-properties.ui:
	* capplet/nwam_location_dialog.c (on_button_clicked):
	* capplet/nwam_rules_dialog.c (apply), (nwam_rules_dialog_init),
	(nwam_rules_dialog_finalize), (nwam_rules_dialog_run),
	(response_cb):
	* capplet/nwam_rules_dialog.h:
	* capplet/nwam_vpn_pref_dialog.c (on_rules_button_clicked):
	Scrollwindow doesn't support remove an inserted panel, so use vbox.
	Fixed 10787 [A11y] The Edit VPN rules window fails to adjust window
	size to expose all the widgets inside.

2009-09-04  Darren Kenny  <darren.kenny@sun.com>

	* capplet/nwam_conn_conf_ip_panel.c:
	  Ensure that do_connect on wifi_dialog is false when editing.
	* capplet/nwam_wireless_dialog.c:
	  Fix defect#10900 to add key length and format checking to WEP and
	  WPA keys input.
	* common/nwamui_daemon.c:
	  Don't re-populate the wifi fav list on connect to a wlan, we will
	  get events to do it for us.
	* common/nwamui_ncu.c:
	  Fix minor bug where some states we're defaulting to NOT_CONNECTED
	  when there was a more specific state to use.
	* common/nwamui_wifi_net.c: 
	  Don't set the name of a wlan if it's the same. Also fix mis-match of
	  gvalue types for wep key index, and if a wlan is modifed then don't
	  reload from the system.

2009-09-04  Darren Kenny  <darren.kenny@sun.com>

	* common/nwamui_ncu.c: 
	  Fix minor bug, where setting prv->active after calling
	  g_object_notify() causes the notification to happen twice.
	* daemon/notify.h, daemon/notify.c: 
	  Add notify_notification_set_notification_style() to allow you to set
	  how notifications are re-used or not, etc. Set the default behaviour
	  to always create a new notification message, rather than re-use.
	  This fixes a11y defect#11156.
	* daemon/main.c: 
	  Add some CLI options, hidden, which allow setting of the
	  notification styles to testing purposes.

2009-09-03  Darren Kenny  <darren.kenny@sun.com>

	* common/nwamui_daemon.c, common/nwamui_ncu.c,